# JupyterJeep

./: .gitignore  README.md  copilotTest.js  fast-ai-chapter05-image-classification.ipynb  fast-ai-chapter06-other-computer-vision-problems.ipynb  fast-ai-dog-or-cat-tutorial.ipynb  helloworld.ipynb  helloworld.py  interactivePlot.ipynb  pytorchnotes.txt  tutorial_play_the_game.ipynb
aiart/: art_01_Intro_GradientDescent.ipynb  art_02_LearningRepresentations.ipynb
fastai_exercises/: fast-ai-chapter01.ipynb  fast-ai-chapter02-model-to-production.ipynb  fast-ai-chapter04-quiz.ipynb  fast-ai-chapter04-under-the-hood.ipynb  fast-ai-chapter05-image-classification.ipynb  fast-ai-chapter05-quiz.ipynb  fast-ai-chapter06-other-computer-vision-problems.ipynb  fast-ai-dog-or-cat-tutorial.ipynb  fast_ai_chapter07-state-of-the-art-model.ipynb  fast_ai_chapter08-collaborative-filtering.ipynb  fast_ai_chapter09-tabular-modeling-deep-dive.ipynb  fast_ai_chapter10-nlp-deep-dive-rnn.ipynb  fast_ai_m1_fafo.ipynb  fastai.km  fastai.mm.md
fastai_exercises/mindmaps/: cmd_tree.mm.md  fastai.km  fastai_book.mm.md  fastai_ch_10_nlp_deep_dive.mm.md  fastai_ch_7_state_of_the_art.mm.md  fastai_ch_8_collaborative_filtering.mm.md  fastai_library.mm.md  loss_functions.km  rust_cmd_echor.mm.md  (+1 more)
html/: app_hello_world_flask.py  flask_example.ipynb  html_scratchpad.ipynb  webcontent_cell_examples.ipynb
nanoGPT3-karpathy/: biggram.py  karpathy-notebook-follow-along.ipynb  scratchpad_DELETEME.ipynb
rusty_jeep_project/: Cargo.toml  _about_rust_dir.text  rusty_jupyter.ipynb
rusty_jeep_project/bevy_break_out/: Cargo.toml
rusty_jeep_project/bevy_break_out/examples/: bevy_ecs_tilemap.rs  game_menu.rs  main.rs
rusty_jeep_project/bevy_break_out/mindmap/: bevy_menu.mm.md
rusty_jeep_project/bevy_break_out/src/: app_state.rs  bevy_editor_pls_key_shortcuts.txt  console_bevy_save.rs  file_and_folder_notes.txt  game.rs  game_of_life.rs  game_state.rs  main.rs  menu.rs  splash.rs
rusty_jeep_project/bevy_break_out/src/bundles/: mod.rs
rusty_jeep_project/bevy_break_out/src/configs/: mod.rs
rusty_jeep_project/bevy_calculator_mton/: Cargo.toml
rusty_jeep_project/bevy_calculator_mton/src/: button.rs  calc.rs  main.rs  rust_scratch_pad.ipynb
rusty_jeep_project/bevy_inspector_gui/: Cargo.toml
rusty_jeep_project/bevy_inspector_gui/examples/: alpha_mode.rs  bevy_ui_playground.rs  billboard.rs  bloom.rs  bundles.rs  canvas_low_res.rs  egui_animation_timeline_mockup.rs  egui_playground.rs  egui_timeline_learning_example.rs  healthbar_stress_test.rs  inspector_driven_circle.rs  minimal_2d.rs  minimal_3d.rs  parenting_commands.rs  parenting_painter.rs  render_layers.rs  ui.rs
rusty_jeep_project/bevy_inspector_gui/examples/debug_text_plugin/: mod.rs
rusty_jeep_project/bevy_inspector_gui/examples/dock_plugin/: mod.rs
rusty_jeep_project/bevy_inspector_gui/examples/egui_inspector/: mod.rs
rusty_jeep_project/bevy_inspector_gui/src/: main.rs
rusty_jeep_project/guessing_game/: Cargo.toml
rusty_jeep_project/guessing_game/src/: main.rs
rusty_jeep_project/jupyter_notebook_rustpad/: Cargo.toml
test/: test_component_manager.py  test_environment_flag.py  test_pubsub_event_manager.py  test_util_dataframe_table.py
utils/: utils_mton.py
(+73 files in other folders)
