[package]
name = "bevy_break_out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10", features = ["mp3"]}
bevy_editor_pls = "0.4"
bevy_save = "0.8.1"
bevy_ecs_tilemap = "0.10.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimization for dependencies (including Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3