[package]
name = "bevy_calculator_mton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
egui = "0.21"
bevy_egui = "0.20"
# or
bevy-inspector-egui = "0.16.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimization for dependencies (including Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3